@@ -1,6 +1,7 @@
 ver 0.21.2 (not yet released)
 * decoder
   - ffmpeg: require FFmpeg 3.1 or later
+  - ffmpeg: fix broken sound with certain codecs
 
 ver 0.21.1 (2018/11/04)
 * protocol
